--- a/myProyecto/petalos/templates/core/formulario.html
+++ b/myProyecto/petalos/templates/core/formulario.html
@@ -34,7 +34,7 @@ Registro de Flores
                             </div>
                             <div class="dropdown-divider"></div>
                             <div>
-                                <input type="file" name="flproducto" id="filepro">
+                                <input type="file" name="txtImagen" accept="image/*" id="filepro">
 
                             </div>
 
