--- a/myProyecto/petalos/templates/core/login.html
+++ b/myProyecto/petalos/templates/core/login.html
@@ -28,9 +28,9 @@ Login de Acceso
         </table>
 
         <button class="btn btn-lg btn-primary btn-block" type="submit" value="Ingresar">Ingresar</button>
-        {% if msg%}
-        <div class="alert alert-danger" role="alert">
-            {{msg}}
+        {% if msgs%}
+        <div class="alert alert-success" role="alert">
+            {{msgs}}
         </div>
         {% endif %}
     
