--- a/myProyecto/petalos/templates/core/galeria.html
+++ b/myProyecto/petalos/templates/core/galeria.html
@@ -74,6 +74,14 @@ Galeria de Flores- Petalos
                     <div class="card-footer">
                         <a href="{% url 'AGREGAR' f.name %}" class="btn btn-primary">Añadir al carrito</a>
                         <a href="{% url 'ELIMINA' f.name %}" class="btn btn-danger">Eliminar</a>
+
+                        <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p">
+                            Add to cart
+                            <i class="fas fa-shopping-cart ml-1"></i>
+                        </a>
+                        <a href="{{ object.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">
+                            Remove from cart
+                        </a>
                     </div>
                 </div>
             {% endfor %}
