Revert "Avance Carro de compras"
This reverts commit 2fd3db45cb6c84fcad5021c6113e5bd9adbc7de7.

--- a/myProyecto/petalos/templates/core/galeria.html
+++ b/myProyecto/petalos/templates/core/galeria.html
@@ -72,11 +72,16 @@ Galeria de Flores- Petalos
                     
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'AGREGAR_CARRO' f.name  %}" class="btn btn-primary">Añadir al carrito</a>
+                        <a href="{% url 'AGREGAR' f.name %}" class="btn btn-primary">Añadir al carrito</a>
                         <a href="{% url 'ELIMINA' f.name %}" class="btn btn-danger">Eliminar</a>
-                        
 
-                        
+                        <a href="{{ object.get_add_to_cart_url }}" class="btn btn-primary btn-md my-0 p">
+                            Add to cart
+                            <i class="fas fa-shopping-cart ml-1"></i>
+                        </a>
+                        <a href="{{ object.get_remove_from_cart_url }}" class="btn btn-danger btn-md my-0 p">
+                            Remove from cart
+                        </a>
                     </div>
                 </div>
             {% endfor %}
