--- a/myProyecto/petalos/templates/core/galeria.html
+++ b/myProyecto/petalos/templates/core/galeria.html
@@ -9,82 +9,84 @@ Galeria de Flores- Petalos
 {% block contenido %}
 <!-- sector del menu -->
     <section>
-        <div class="card-group">
-            <div class="card">
-                <img src="{% static 'img/fotoindex2.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Florero de Rosas y Gypsuphylia</h5>
-                    <p class="card-text">$20.000</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Añadir al carrito</a>
-                    <a href="#" class="btn btn-danger">Eliminar</a>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="{% static 'img/fotoindex1.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Florero de Rosas y Gerberas</h5>
-                    <p class="card-text">$33.500</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Añadir al carrito</a>
-                    <a href="#" class="btn btn-danger">Eliminar</a>
-                </div>
-            </div>
-
-            <div class="card">
-                <img src="{% static 'img/fotoindex3.jpg' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Ramo de 10 Tulipanes</h5>
-                    <p class="card-text">$20.000</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Añadir al carrito</a>
-                    <a href="#" class="btn btn-danger">Eliminar</a>
-                </div>
-            </div>
-
-
-            <div class="card">
-                <img src="{% static 'img/fotoindex4.png' %}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Florero de Tulipanes + Chocolate</h5>
-                    <p class="card-text">$29.490</p>
-                </div>
-                <div class="card-footer">
-                    <a href="#" class="btn btn-primary">Añadir al carrito</a>
-                    <a href="#" class="btn btn-danger">Eliminar</a>
-                </div>
-            </div>
-
-            {% for f in lista %}  
-                <div class="card">
-                    {% if f.imagen %}
-                    <img src="{{f.imagen.url}}"class="card-img-top" alt="...">
-                    {% endif %}
-                    <div class="card-body">
-                        <h5 class="card-title">{{f.name}}</h5>
-                        <p class="card-text">{{f.precio}}</p>
-                        <p class="card-text">{{f.categoria}}</p>
-
-                    
+        <div class="container">
+            <div class="row">
+                <div class="card-deck" style="text-align:center;">
+                    <div class="col-sm-20 py-4">
+                        <div class="card" style="max-width: 15rem;">
+                            <img src="{% static 'img/fotoindex2.jpg' %}" class="card-img-top img-thumbnail"  alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Florero de Rosas y Gypsuphylia</h5>
+                                <p class="card-text"> <font size="2">Desde</font> $20.000</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="#" class="btn btn-primary">Añadir al carrito</a>
+                                <a href="#" class="btn btn-danger">Eliminar</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="card-footer">
-                        <a href="{% url 'AGREGAR_CARRO' f.name  %}" class="btn btn-primary">Añadir al carrito</a>
-                        <a href="{% url 'ELIMINA' f.name %}" class="btn btn-danger">Eliminar</a>
-                        
+                    <div class="col-sm-20 py-4">
+                        <div class="card" style="max-width: 15rem;">
+                            <img src="{% static 'img/fotoindex1.jpg' %}" class="card-img-top img-thumbnail" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Florero de Rosas y Gerberas</h5>
+                                <p class="card-text"><font size="2">Desde</font> $33.500</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="#" class="btn btn-primary">Añadir al carrito</a>
+                                <a href="#" class="btn btn-danger">Eliminar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-20 py-4">
+                        <div class="card" style="max-width: 15rem;">
+                            <img src="{% static 'img/fotoindex3.jpg' %}" class="card-img-top img-thumbnail" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Ramo de 10 Tulipanes</h5>
+                                <p class="card-text"><font size="2">Desde</font> $20.000</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="#" class="btn btn-primary">Añadir al carrito</a>
+                                <a href="#" class="btn btn-danger">Eliminar</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-20 py-4">
+                        <div class="card" style="max-width: 15rem;">
+                            <img src="{% static 'img/fotoindex4.png' %}" class="card-img-top img-thumbnail" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Florero de Tulipanes + Chocolate</h5>
+                                <p class="card-text"><font size="2">Desde</font> $29.490</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="#" class="btn btn-primary">Añadir al carrito</a>
+                                <a href="#" class="btn btn-danger">Eliminar</a>
+                            </div>
+                        </div>
+                    </div>
 
-                        
+                    {% for f in lista %}
+                    <div class="col-sm-20 py-4">
+                        <div class="card" style="max-width: 15rem;">
+                            {% if f.imagen %}
+                            <img src="{{f.imagen.url}}" class="card-img-top img-thumbnail" alt="...">
+                            {% endif %}
+                            <div class="card-body">
+                                <h5 class="card-title">{{f.name}}</h5>
+                                <p class="card-text"><font size="2">Desde</font> ${{f.precio}}</p>
+                                <p class="card-text">{{f.categoria}}</p>
+                            </div>
+                            <div class="card-footer">
+                                <a href="{% url 'AGREGAR_CARRO' f.name %}" class="btn btn-primary">Añadir al carrito</a>
+                                <a href="{% url 'ELIMINA' f.name %}" class="btn btn-danger">Eliminar</a>
+            
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                     </div>
                 </div>
-            {% endfor %}
-
-
-
-
+            </div>
         </div>
-
     </section>
 {% endblock contenido %}
