Carrito De Compras Terminado

--- a/myProyecto/petalos/templates/core/base.html
+++ b/myProyecto/petalos/templates/core/base.html
@@ -47,6 +47,9 @@ Lo demas se dejo tal cual estaba.
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'FORMU' %}" style="color:white;">Formulario</a>
                     </li>
+                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'CARRITO' %}" style="color:white;">Carrito</a>
+                    </li>
                 </ul>
 
                 <!--  INICIO ZONA MI PERFIL (ZONA SUPERIOR DERECHA) -->
