--- a/myProyecto/petalos/templates/core/base.html
+++ b/myProyecto/petalos/templates/core/base.html
@@ -11,6 +11,8 @@ Lo demas se dejo tal cual estaba.
 <!DOCTYPE html>
 <html lang="en">
     {% load static %}
+    {% load pwa %}
+    {% progressive_web_app_meta %}
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
